--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ html {
   
   .avatar-modal {
     position: fixed;
-    top: 30%;
-    left: 50%;
+    top: 40%;
+    left: 14.5%;
     transform: translate(-50%, -30%);
     background: var(--background);
     padding: 1rem;
@@ -277,6 +277,35 @@ html {
     font-size: 1.2rem;
     margin: 0;
   }
+  #habit-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background: var(--card);
+    border: 1px solid var(--border);
+    border-radius: 16px;
+    padding: 1rem;
+    /* margin-bottom: 0.1rem; */
+    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    transition: transform 0.2s ease;
+  }
+  
+  #habit-list > li {
+      background: var(--card);
+      border: 1px solid var(--border);
+      list-style-type: none;
+      border-radius: 16px;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      transition: transform 0.2s ease;
+  }
+  
+  #habit-list > li:hover {
+      transform: translateY(-2px);
+  }
+  
 
   .quote {
     margin: 1rem 0;
@@ -308,3 +337,32 @@ html {
     cursor: pointer;
     float: right;
   }
+
+  .calendar {
+    display: flex;
+    margin-top: 0.5rem;
+    gap: 0.25rem;
+  }
+  
+  .calendar-day {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 0.3rem;
+    border-radius: 4px;
+    font-size: 12px;
+  }
+  
+  .calendar-day.done {
+    background-color: #4caf50;
+    color: white;
+  }
+  
+  .calendar-day.missed {
+    background-color: #ddd;
+    color: #666;
+  }
+  
+
+
+  
